hphp/hack/test/typecheck/new_inference/eager_solve/lambda_prop.php.like_types.exp
File "lambda_prop.php", line 19, characters 13-14:
Invalid argument (Typing[4110])
File "lambda_prop.php", line 18, characters 49-50:
Expected T1
File "lambda_prop.php", line 18, characters 32-33:
But got dynamic because it is an unenforceable type
